Bug 261392 - systemsettings crashed in Powersettings Module
Summary: systemsettings crashed in Powersettings Module
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: powermanagement-kcm (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Dario Freddi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-27 17:20 UTC by Schiwi
Modified: 2011-01-03 17:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (7.11 KB, text/plain)
2011-01-03 17:22 UTC, sponsoredbythewind@gmail.com
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Schiwi 2010-12-27 17:20:10 UTC
Application: systemsettings (1.0)
KDE Platform Version: 4.5.90 (4.6 RC1)
Qt Version: 4.7.0
Operating System: Linux 2.6.35-23-generic x86_64
Distribution: Ubuntu 10.10

-- Information about the crash:
- What I was doing when the application crashed:

It crashes when i change something in the Profile section and click "apply"
(always reproducible) 
I have no Laptop, my Computer is a Desktop PC

The crash can be reproduced every time.

-- Backtrace:
Application: Systemeinstellungen (systemsettings), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f79ac37a760 (LWP 18960))]

Thread 4 (Thread 0x7f7995689700 (LWP 18961)):
#0  0x00007fff301b7880 in ?? ()
#1  0x00007fff301b7945 in clock_gettime ()
#2  0x00007f79a5e060bf in clock_gettime (clock_id=-1788310816, tp=0x7f7995688ae0) at ../sysdeps/unix/clock_gettime.c:100
#3  0x00007f79a9e8094f in do_gettime () at tools/qelapsedtimer_unix.cpp:105
#4  qt_gettime () at tools/qelapsedtimer_unix.cpp:119
#5  0x00007f79a9f4d1fd in QTimerInfoList::updateCurrentTime (this=0x7f7995688ae0) at kernel/qeventdispatcher_unix.cpp:339
#6  0x00007f79a9f4d225 in QTimerInfoList::timerWait (this=0x7f7995688ae0, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#7  0x00007f79a9f4b3dd in timerSourcePrepareHelper (src=<value optimized out>, timeout=0x7f7995688c1c) at kernel/qeventdispatcher_glib.cpp:136
#8  0x00007f79a9f4b485 in timerSourcePrepare (source=0x7f7995688ae0, timeout=0x7f7995688ae0) at kernel/qeventdispatcher_glib.cpp:169
#9  0x00007f79a75c3a11 in g_main_context_prepare (context=0x119b0d0, priority=<value optimized out>) at /build/buildd/glib2.0-2.26.0/glib/gmain.c:2469
#10 0x00007f79a75c3e78 in g_main_context_iterate (context=0x119b0d0, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>) at /build/buildd/glib2.0-2.26.0/glib/gmain.c:2760
#11 0x00007f79a75c445c in g_main_context_iteration (context=0x119b0d0, may_block=1) at /build/buildd/glib2.0-2.26.0/glib/gmain.c:2843
#12 0x00007f79a9f4b1e6 in QEventDispatcherGlib::processEvents (this=0x119aca0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:417
#13 0x00007f79a9f1da02 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#14 0x00007f79a9f1ddec in QEventLoop::exec (this=0x7f7995688db0, flags=) at kernel/qeventloop.cpp:201
#15 0x00007f79a9e282fd in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:490
#16 0x00007f79a9efd5f8 in QInotifyFileSystemWatcherEngine::run (this=0x11739f0) at io/qfilesystemwatcher_inotify.cpp:248
#17 0x00007f79a9e2b27e in QThreadPrivate::start (arg=0x11739f0) at thread/qthread_unix.cpp:266
#18 0x00007f79a7a82971 in start_thread (arg=<value optimized out>) at pthread_create.c:304
#19 0x00007f79a981392d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#20 0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f7993818700 (LWP 18962)):
#0  0x00007f79a7a85c9d in __pthread_mutex_unlock_usercnt (mutex=0x1226888) at pthread_mutex_unlock.c:52
#1  __pthread_mutex_unlock (mutex=0x1226888) at pthread_mutex_unlock.c:290
#2  0x00007f79a75c3b51 in g_main_context_prepare (context=0x1226880, priority=<value optimized out>) at /build/buildd/glib2.0-2.26.0/glib/gmain.c:2497
#3  0x00007f79a75c3e78 in g_main_context_iterate (context=0x1226880, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>) at /build/buildd/glib2.0-2.26.0/glib/gmain.c:2760
#4  0x00007f79a75c445c in g_main_context_iteration (context=0x1226880, may_block=1) at /build/buildd/glib2.0-2.26.0/glib/gmain.c:2843
#5  0x00007f79a9f4b1e6 in QEventDispatcherGlib::processEvents (this=0x1226280, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:417
#6  0x00007f79a9f1da02 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#7  0x00007f79a9f1ddec in QEventLoop::exec (this=0x7f7993817db0, flags=) at kernel/qeventloop.cpp:201
#8  0x00007f79a9e282fd in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:490
#9  0x00007f79a9efd5f8 in QInotifyFileSystemWatcherEngine::run (this=0x12259e0) at io/qfilesystemwatcher_inotify.cpp:248
#10 0x00007f79a9e2b27e in QThreadPrivate::start (arg=0x12259e0) at thread/qthread_unix.cpp:266
#11 0x00007f79a7a82971 in start_thread (arg=<value optimized out>) at pthread_create.c:304
#12 0x00007f79a981392d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#13 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f7993017700 (LWP 18963)):
#0  0x00007f79a9807203 in __poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f79a75c4009 in g_main_context_poll (context=0x1231fe0, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>) at /build/buildd/glib2.0-2.26.0/glib/gmain.c:3093
#2  g_main_context_iterate (context=0x1231fe0, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>) at /build/buildd/glib2.0-2.26.0/glib/gmain.c:2775
#3  0x00007f79a75c445c in g_main_context_iteration (context=0x1231fe0, may_block=1) at /build/buildd/glib2.0-2.26.0/glib/gmain.c:2843
#4  0x00007f79a9f4b1e6 in QEventDispatcherGlib::processEvents (this=0x123a110, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:417
#5  0x00007f79a9f1da02 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#6  0x00007f79a9f1ddec in QEventLoop::exec (this=0x7f7993016dd0, flags=) at kernel/qeventloop.cpp:201
#7  0x00007f79a9e282fd in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:490
#8  0x00007f79a17a5b6c in Herqq::Upnp::HControlPointThread::run() () from /usr/lib/libHUpnp.so.0
#9  0x00007f79a9e2b27e in QThreadPrivate::start (arg=0x1239be0) at thread/qthread_unix.cpp:266
#10 0x00007f79a7a82971 in start_thread (arg=<value optimized out>) at pthread_create.c:304
#11 0x00007f79a981392d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#12 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f79ac37a760 (LWP 18960)):
[KCrash Handler]
#6  0x00007f7994c7dbc4 in EditPage::save (this=0x11b3910) at ../../../../powerdevil/kcmodule/profiles/EditPage.cpp:191
#7  0x00007f79abf76887 in KCModuleProxy::save (this=<value optimized out>) at ../../kutils/kcmoduleproxy.cpp:279
#8  0x00007f79abd4b6e3 in ModuleView::moduleSave (this=<value optimized out>, module=0x11b91a0) at ../../../systemsettings/core/ModuleView.cpp:318
#9  0x00007f79abd4c83b in ModuleView::resolveChanges (this=0x109faf0, currentProxy=0x1141050) at ../../../systemsettings/core/ModuleView.cpp:276
#10 0x00007f79abd4d0c9 in ModuleView::activeModuleChanged (this=0x109faf0, current=0x1200810, previous=0x114cb00) at ../../../systemsettings/core/ModuleView.cpp:358
#11 0x00007f79abd4f008 in ModuleView::qt_metacall (this=0x109faf0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff30056560) at ./ModuleView.moc:99
#12 0x00007f79a9f36b27 in QMetaObject::activate (sender=0x10e9890, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x3) at kernel/qobject.cpp:3280
#13 0x00007f79ab940a58 in KPageWidget::currentPageChanged (this=0x11b91a0, _t1=0x1200810, _t2=0x114cb00) at ./kpagewidget.moc:96
#14 0x00007f79ab940bf8 in KPageWidget::qt_metacall (this=0x10e9890, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff300566a0) at ./kpagewidget.moc:84
#15 0x00007f79a9f36b27 in QMetaObject::activate (sender=0x10e9890, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x3) at kernel/qobject.cpp:3280
#16 0x00007f79ab93b9d7 in KPageView::currentPageChanged (this=0x11b91a0, _t1=<value optimized out>, _t2=<value optimized out>) at ./kpageview.moc:140
#17 0x00007f79ab93d185 in KPageViewPrivate::_k_pageSelected (this=0x10b1d20, index=<value optimized out>, previous=...) at ../../kdeui/paged/kpageview.cpp:244
#18 0x00007f79ab93d3d2 in KPageView::qt_metacall (this=0x10e9890, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff30056900) at ./kpageview.moc:100
#19 0x00007f79ab940bb0 in KPageWidget::qt_metacall (this=0x11b91a0, _c=18583968, _id=-1419122240, _a=0x3) at ./kpagewidget.moc:76
#20 0x00007f79a9f36b27 in QMetaObject::activate (sender=0x1101d50, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x3) at kernel/qobject.cpp:3280
#21 0x00007f79ab122647 in QItemSelectionModel::selectionChanged (this=0x11b91a0, _t1=<value optimized out>, _t2=<value optimized out>) at .moc/release-shared/moc_qitemselectionmodel.cpp:152
#22 0x00007f79ab125737 in QItemSelectionModel::emitSelectionChanged (this=<value optimized out>, newSelection=<value optimized out>, oldSelection=...) at itemviews/qitemselectionmodel.cpp:1581
#23 0x00007f79ab12709b in QItemSelectionModel::select (this=0x1101d50, selection=<value optimized out>, command=<value optimized out>) at itemviews/qitemselectionmodel.cpp:1088
#24 0x00007f79ab93dcdc in KDEPrivate::SelectionModel::select (this=0x11b91a0, selection=..., command=<value optimized out>) at ../../kdeui/paged/kpageview_p.cpp:619
#25 0x00007f79ab0f148d in QListView::setSelection (this=0x10fef70, rect=<value optimized out>, command=) at itemviews/qlistview.cpp:1385
#26 0x00007f79ab0d21cf in QAbstractItemView::mousePressEvent (this=0x10fef70, event=<value optimized out>) at itemviews/qabstractitemview.cpp:1665
#27 0x00007f79aabd2035 in QWidget::event (this=0x10fef70, event=0x7fff30057b50) at kernel/qwidget.cpp:8183
#28 0x00007f79aaf9d5e6 in QFrame::event (this=0x10fef70, e=0x7fff30057b50) at widgets/qframe.cpp:557
#29 0x00007f79ab0d6a8b in QAbstractItemView::viewportEvent (this=0x10fef70, event=0x7fff30057b50) at itemviews/qabstractitemview.cpp:1619
#30 0x00007f79a9f1e507 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<value optimized out>, receiver=0x1173700, event=0x7fff30057b50) at kernel/qcoreapplication.cpp:847
#31 0x00007f79aab7bfac in QApplicationPrivate::notify_helper (this=0xe41270, receiver=0x1173700, e=0x7fff30057b50) at kernel/qapplication.cpp:4392
#32 0x00007f79aab8230e in QApplication::notify (this=0x7fff30058850, receiver=0x1173700, e=0x7fff30057b50) at kernel/qapplication.cpp:3959
#33 0x00007f79ab909086 in KApplication::notify (this=0x7fff30058850, receiver=0x1173700, event=0x7fff30057b50) at ../../kdeui/kernel/kapplication.cpp:311
#34 0x00007f79a9f1ecdc in QCoreApplication::notifyInternal (this=0x7fff30058850, receiver=0x1173700, event=0x7fff30057b50) at kernel/qcoreapplication.cpp:732
#35 0x00007f79aab80dbe in sendEvent (receiver=0x1173700, event=0x7fff30057b50, alienWidget=0x1173700, nativeWidget=0xeab860, buttonDown=<value optimized out>, lastMouseReceiver=<value optimized out>, spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#36 QApplicationPrivate::sendMouseEvent (receiver=0x1173700, event=0x7fff30057b50, alienWidget=0x1173700, nativeWidget=0xeab860, buttonDown=<value optimized out>, lastMouseReceiver=<value optimized out>, spontaneous=true) at kernel/qapplication.cpp:3058
#37 0x00007f79aac04345 in QETWidget::translateMouseEvent (this=0xeab860, event=<value optimized out>) at kernel/qapplication_x11.cpp:4403
#38 0x00007f79aac02c5c in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fff30058470) at kernel/qapplication_x11.cpp:3536
#39 0x00007f79aac2f0e2 in x11EventSourceDispatch (s=0xe44fb0, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#40 0x00007f79a75c0342 in g_main_dispatch (context=0xe43d20) at /build/buildd/glib2.0-2.26.0/glib/gmain.c:2149
#41 g_main_context_dispatch (context=0xe43d20) at /build/buildd/glib2.0-2.26.0/glib/gmain.c:2702
#42 0x00007f79a75c42a8 in g_main_context_iterate (context=0xe43d20, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>) at /build/buildd/glib2.0-2.26.0/glib/gmain.c:2780
#43 0x00007f79a75c445c in g_main_context_iteration (context=0xe43d20, may_block=1) at /build/buildd/glib2.0-2.26.0/glib/gmain.c:2843
#44 0x00007f79a9f4b193 in QEventDispatcherGlib::processEvents (this=0xe0a2b0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:415
#45 0x00007f79aac2ea4e in QGuiEventDispatcherGlib::processEvents (this=0x11b91a0, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#46 0x00007f79a9f1da02 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#47 0x00007f79a9f1ddec in QEventLoop::exec (this=0x7fff300587a0, flags=) at kernel/qeventloop.cpp:201
#48 0x00007f79a9f21ebb in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#49 0x0000000000411a09 in main (argc=<value optimized out>, argv=<value optimized out>) at ../../../systemsettings/app/main.cpp:49

Reported using DrKonqi
Comment 1 Dario Freddi 2011-01-02 18:08:45 UTC
SVN commit 1210916 by dafre:

BUG:261392

Do not crash if no profiles are selected

 M  +4 -0      EditPage.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1210916
Comment 2 sponsoredbythewind@gmail.com 2011-01-03 17:22:24 UTC
Created attachment 55524 [details]
New crash information added by DrKonqi

systemsettings (1.0) on KDE Platform 4.5.90 (4.6 RC1) using Qt 4.7.0

- What I was doing when the application crashed:
trying to apply/save /system settings/power management.

-- Backtrace (Reduced):
#7  0x0766cda1 in EditPage::save (this=0x8917420) at ../../../../powerdevil/kcmodule/profiles/EditPage.cpp:191
#8  0x0088e03a in KCModuleProxy::save (this=0x88a7ef0) at ../../kutils/kcmoduleproxy.cpp:279
#9  0x00a39ad3 in ModuleView::moduleSave (this=0x87f7b30, module=0xbfb331c0) at ../../../systemsettings/core/ModuleView.cpp:318
#10 0x00a39ee9 in ModuleView::moduleSave (this=0x87f7b30) at ../../../systemsettings/core/ModuleView.cpp:309
#11 0x00a3d933 in ModuleView::qt_metacall (this=0x87f7b30, _c=QMetaObject::InvokeMetaMethod, _id=5, _a=0xbfb33388) at ./ModuleView.moc:95