BUG:261392

Do not crash if no profiles are selected

svn path=/trunk/KDE/kdebase/workspace/; revision=1210916